[gd_scene load_steps=16 format=3 uid="uid://1k1rcvp03xma"]

[ext_resource type="Script" path="res://Code/Managers/sound_manager.gd" id="1_spyt0"]
[ext_resource type="PackedScene" uid="uid://bw0yhqbfc0xq" path="res://Scenes/UI/AudioManagerControls.tscn" id="2_jp7r5"]
[ext_resource type="PackedScene" uid="uid://baeaj55y6xd38" path="res://Scenes/UI/BlankButton.tscn" id="3_5ghk0"]
[ext_resource type="AudioStream" uid="uid://u3cq4x2o7dvj" path="res://Assets/Audio/Music/GWJ73_MX_main_layer00_zeroOrMoreFrogs_73bpm.wav" id="3_26e3e"]
[ext_resource type="AudioStream" uid="uid://cnsvybkk4xp8w" path="res://Assets/Audio/Music/GWJ73_MX_main_layer01_oneOrMoreFrogs_73bpm.wav" id="4_6y7wp"]
[ext_resource type="AudioStream" uid="uid://kijxj3q23ga3" path="res://Assets/Audio/Music/GWJ73_MX_main_layer02_threeOrMoreFrogs_73bpm.wav" id="5_j571n"]
[ext_resource type="AudioStream" uid="uid://bshox67kh3ndh" path="res://Assets/Audio/Music/GWJ73_MX_main_layer03_fiveOrMoreFrogs_73bpm.wav" id="6_0qftb"]
[ext_resource type="AudioStream" uid="uid://c20rsptc8ne00" path="res://Assets/Audio/Music/GWJ73_MX_main_layer04_sevenOrMoreFrogs_73bpm.wav" id="7_lmont"]
[ext_resource type="AudioStream" uid="uid://b0u8sb11o8ps" path="res://Assets/Audio/Music/GWJ73_MX_shop_73bpm.wav" id="8_bpga2"]
[ext_resource type="AudioStream" uid="uid://ccu3wpg84hyif" path="res://Assets/Audio/SFX/GWJ73_SFX_AMB_loop_-13dB.wav" id="9_w0smh"]

[sub_resource type="AudioStreamSynchronized" id="AudioStreamSynchronized_5fiec"]
stream_count = 5
stream_0/stream = ExtResource("3_26e3e")
stream_0/volume = -3.0
stream_1/stream = ExtResource("4_6y7wp")
stream_1/volume = -3.0
stream_2/stream = ExtResource("5_j571n")
stream_2/volume = -3.0
stream_3/stream = ExtResource("6_0qftb")
stream_3/volume = -3.0
stream_4/stream = ExtResource("7_lmont")
stream_4/volume = -3.0

[sub_resource type="Animation" id="Animation_avosb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PickupMXShop:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-4.0]
}

[sub_resource type="Animation" id="Animation_lhnym"]
resource_name = "fade_in"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PickupMXShop:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 5.66),
"update": 0,
"values": [-80.0, -4.0]
}

[sub_resource type="Animation" id="Animation_u77gi"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PickupMXShop:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(5.66, 5.66),
"update": 0,
"values": [-4.0, -80.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5wrgw"]
_data = {
"RESET": SubResource("Animation_avosb"),
"fade_in": SubResource("Animation_lhnym"),
"fade_out": SubResource("Animation_u77gi")
}

[node name="SoundManager" type="Node2D"]
z_as_relative = false
script = ExtResource("1_spyt0")

[node name="AudioManagerControls" parent="." instance=ExtResource("2_jp7r5")]

[node name="MainSlider" parent="AudioManagerControls/HBoxContainer/VBoxContainer" index="0"]
value = 0.6

[node name="MXSlider" parent="AudioManagerControls/HBoxContainer/VBoxContainer" index="1"]
value = 0.6

[node name="FXSlider" parent="AudioManagerControls/HBoxContainer/VBoxContainer" index="2"]
value = 0.6

[node name="ATMSlider" parent="AudioManagerControls/HBoxContainer/VBoxContainer" index="3"]
value = 0.6

[node name="MainToggle" parent="AudioManagerControls/HBoxContainer/VBoxContainer2" index="0"]
button_pressed = true

[node name="MXToggle" parent="AudioManagerControls/HBoxContainer/VBoxContainer2" index="1"]
button_pressed = true

[node name="FXToggle" parent="AudioManagerControls/HBoxContainer/VBoxContainer2" index="2"]
button_pressed = true

[node name="ATMToggle" parent="AudioManagerControls/HBoxContainer/VBoxContainer2" index="3"]
button_pressed = true

[node name="VBoxContainer4" type="VBoxContainer" parent="AudioManagerControls/HBoxContainer" index="3"]
visible = false
layout_mode = 2

[node name="menu_buttons" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = 85.0
offset_right = 150.0
offset_bottom = 145.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="menu_buttons"]
layout_mode = 2

[node name="MainMenuButton" parent="menu_buttons/HBoxContainer" instance=ExtResource("3_5ghk0")]
layout_mode = 2
theme_override_font_sizes/font_size = 34
text = "  Main Menu  "

[node name="VSeparator" type="VSeparator" parent="menu_buttons/HBoxContainer"]
visibility_layer = 0
layout_mode = 2

[node name="VSeparator2" type="VSeparator" parent="menu_buttons/HBoxContainer"]
visibility_layer = 0
layout_mode = 2

[node name="VSeparator3" type="VSeparator" parent="menu_buttons/HBoxContainer"]
visibility_layer = 0
layout_mode = 2

[node name="VSeparator4" type="VSeparator" parent="menu_buttons/HBoxContainer"]
visibility_layer = 0
layout_mode = 2

[node name="VSeparator6" type="VSeparator" parent="menu_buttons/HBoxContainer"]
visibility_layer = 0
layout_mode = 2

[node name="VSeparator5" type="VSeparator" parent="menu_buttons/HBoxContainer"]
visibility_layer = 0
layout_mode = 2

[node name="QuitButton" parent="menu_buttons/HBoxContainer" instance=ExtResource("3_5ghk0")]
layout_mode = 2
theme_override_font_sizes/font_size = 34
text = "  Quit  "

[node name="PickupMXTheme" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamSynchronized_5fiec")
bus = &"MXLAYERS"

[node name="PickupMXShop" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_bpga2")
volume_db = -4.0
bus = &"MXSHOP"

[node name="PickupATM" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_w0smh")
volume_db = -28.0
bus = &"ATM"

[node name="PickupSFX1" type="AudioStreamPlayer" parent="."]
max_polyphony = 2
bus = &"SFX"

[node name="PickupSFX2" type="AudioStreamPlayer" parent="."]
max_polyphony = 2
bus = &"SFX"

[node name="PickupSFX3" type="AudioStreamPlayer" parent="."]
max_polyphony = 2
bus = &"SFX"

[node name="PickupSFX4" type="AudioStreamPlayer" parent="."]
max_polyphony = 2
bus = &"SFX"

[node name="PickupSFX5" type="AudioStreamPlayer" parent="."]
max_polyphony = 2
bus = &"SFX"

[node name="PickupSFX6" type="AudioStreamPlayer" parent="."]
max_polyphony = 2
bus = &"SFX"

[node name="PickupSFX7" type="AudioStreamPlayer" parent="."]
max_polyphony = 2
bus = &"SFX"

[node name="PickupSFX8" type="AudioStreamPlayer" parent="."]
max_polyphony = 2
bus = &"SFX"

[node name="PickupSFX9" type="AudioStreamPlayer" parent="."]
max_polyphony = 2
bus = &"SFX"

[node name="PickupSFX10" type="AudioStreamPlayer" parent="."]
max_polyphony = 2
bus = &"SFX"

[node name="PickupSFX11" type="AudioStreamPlayer" parent="."]
max_polyphony = 2
bus = &"SFX"

[node name="PickupSFX12" type="AudioStreamPlayer" parent="."]
max_polyphony = 2
bus = &"SFX"

[node name="PickupSFX13" type="AudioStreamPlayer" parent="."]
max_polyphony = 2
bus = &"SFX"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5wrgw")
}

[connection signal="focus_entered" from="AudioManagerControls/HBoxContainer/VBoxContainer/MainSlider" to="." method="_on_main_slider_focus_entered"]
[connection signal="focus_exited" from="AudioManagerControls/HBoxContainer/VBoxContainer/MainSlider" to="." method="_on_main_slider_focus_exited"]
[connection signal="mouse_entered" from="AudioManagerControls/HBoxContainer/VBoxContainer/MainSlider" to="." method="_on_main_slider_mouse_entered"]
[connection signal="mouse_exited" from="AudioManagerControls/HBoxContainer/VBoxContainer/MainSlider" to="." method="_on_main_slider_mouse_exited"]
[connection signal="value_changed" from="AudioManagerControls/HBoxContainer/VBoxContainer/MainSlider" to="." method="_on_main_slider_value_changed"]
[connection signal="focus_entered" from="AudioManagerControls/HBoxContainer/VBoxContainer/MXSlider" to="." method="_on_mx_slider_focus_entered"]
[connection signal="focus_exited" from="AudioManagerControls/HBoxContainer/VBoxContainer/MXSlider" to="." method="_on_mx_slider_focus_exited"]
[connection signal="mouse_entered" from="AudioManagerControls/HBoxContainer/VBoxContainer/MXSlider" to="." method="_on_mx_slider_mouse_entered"]
[connection signal="mouse_exited" from="AudioManagerControls/HBoxContainer/VBoxContainer/MXSlider" to="." method="_on_mx_slider_mouse_exited"]
[connection signal="value_changed" from="AudioManagerControls/HBoxContainer/VBoxContainer/MXSlider" to="." method="_on_mx_slider_value_changed"]
[connection signal="focus_entered" from="AudioManagerControls/HBoxContainer/VBoxContainer/FXSlider" to="." method="_on_fx_slider_focus_entered"]
[connection signal="focus_exited" from="AudioManagerControls/HBoxContainer/VBoxContainer/FXSlider" to="." method="_on_fx_slider_focus_exited"]
[connection signal="mouse_entered" from="AudioManagerControls/HBoxContainer/VBoxContainer/FXSlider" to="." method="_on_fx_slider_mouse_entered"]
[connection signal="mouse_exited" from="AudioManagerControls/HBoxContainer/VBoxContainer/FXSlider" to="." method="_on_fx_slider_mouse_exited"]
[connection signal="value_changed" from="AudioManagerControls/HBoxContainer/VBoxContainer/FXSlider" to="." method="_on_fx_slider_value_changed"]
[connection signal="focus_entered" from="AudioManagerControls/HBoxContainer/VBoxContainer/ATMSlider" to="." method="_on_atm_slider_focus_entered"]
[connection signal="focus_exited" from="AudioManagerControls/HBoxContainer/VBoxContainer/ATMSlider" to="." method="_on_atm_slider_focus_exited"]
[connection signal="mouse_entered" from="AudioManagerControls/HBoxContainer/VBoxContainer/ATMSlider" to="." method="_on_atm_slider_mouse_entered"]
[connection signal="mouse_exited" from="AudioManagerControls/HBoxContainer/VBoxContainer/ATMSlider" to="." method="_on_atm_slider_mouse_exited"]
[connection signal="value_changed" from="AudioManagerControls/HBoxContainer/VBoxContainer/ATMSlider" to="." method="_on_atm_slider_value_changed"]
[connection signal="focus_entered" from="AudioManagerControls/HBoxContainer/VBoxContainer2/MainToggle" to="." method="_on_main_toggle_focus_entered"]
[connection signal="focus_exited" from="AudioManagerControls/HBoxContainer/VBoxContainer2/MainToggle" to="." method="_on_main_toggle_focus_exited"]
[connection signal="mouse_entered" from="AudioManagerControls/HBoxContainer/VBoxContainer2/MainToggle" to="." method="_on_main_toggle_mouse_entered"]
[connection signal="pressed" from="AudioManagerControls/HBoxContainer/VBoxContainer2/MainToggle" to="." method="_on_main_toggle_pressed"]
[connection signal="mouse_entered" from="AudioManagerControls/HBoxContainer/VBoxContainer2/MXToggle" to="." method="_on_mx_toggle_mouse_entered"]
[connection signal="pressed" from="AudioManagerControls/HBoxContainer/VBoxContainer2/MXToggle" to="." method="_on_mx_toggle_pressed"]
[connection signal="mouse_entered" from="AudioManagerControls/HBoxContainer/VBoxContainer2/FXToggle" to="." method="_on_fx_toggle_mouse_entered"]
[connection signal="pressed" from="AudioManagerControls/HBoxContainer/VBoxContainer2/FXToggle" to="." method="_on_fx_toggle_pressed"]
[connection signal="mouse_entered" from="AudioManagerControls/HBoxContainer/VBoxContainer2/ATMToggle" to="." method="_on_atm_toggle_mouse_entered"]
[connection signal="pressed" from="AudioManagerControls/HBoxContainer/VBoxContainer2/ATMToggle" to="." method="_on_atm_toggle_pressed"]

[editable path="AudioManagerControls"]
